<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_light"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/iv_register_logo"
        android:layout_width="93dp"
        android:layout_height="82dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:src="@mipmap/logo" />


    <TextView
        android:id="@+id/tv_register_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/register_explain"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />

    <TextView
        android:id="@+id/tv_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/et_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register_pseudo"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/tv_register_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_cp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/et_register_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Code Postal "
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="15dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_register_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:background="@drawable/display_menu_guide"
        android:text="@string/register_enregistrer"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />






</LinearLayout>