<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignStart="@+id/fl_menu_display"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_guide_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/guide_tittle"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_marginTop="38dp"/>

    <ImageView
        android:id="@+id/iv_guide_logo"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:paddingTop="8dp"
        android:src="@mipmap/guide_bleu" />


    <Button
        android:id="@+id/btn_guide_poubelle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/display_menu_guide"
        android:backgroundTint="#ADD8E6"
        android:text="@string/search_by_trashbin" />

    <Button
        android:id="@+id/btn_guide_trashtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/display_menu_guide"
        android:backgroundTint="@color/white"
        android:text="@string/search_by_type" />

    <Button
        android:id="@+id/btn_guide_produit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/display_menu_guide"
        android:backgroundTint="#ADD8E6"
        android:text="@string/search_by_produce" />

</LinearLayout>